--- a/templates/section.html
+++ b/templates/section.html
@@ -14,7 +14,7 @@
 <ul class="title-list">
 {% for page in pages %}
   <li>
-    <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
+    <a href="{{ page.permalink | safe }}">{% if page.date %}{{page.date}} - {% endif %}{{ page.title }}</a>
   </li>
 {% endfor %}
 </ul>
