--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@
 
 /* footnotes */
 .footnote-definition {
-  margin: 0 0 0 .125rem;
+  margin: 0 0 1rem .125rem;
 }
 
 .footnote-definition-label {
